Dynamically apply `Add-Opens` directives from `MANIFEST.MF`